# 2019-10-rust-excercises

./: .gitignore  README.md
err_clap/: Cargo.toml
err_clap/src/: cli.yml  main.rs
err_gumdrop/: Cargo.toml
err_gumdrop/src/: main.rs
err_structopt/: Cargo.toml
err_structopt/src/: main.rs
hello-cargo/: Cargo.toml
hello-cargo/src/: main.rs
hello-cargo/src/data/: mod.rs
hw0/: .hw1.rs.swp  hw1  hw1.rs
logging1/: Cargo.toml
logging1/src/: lib.rs  transport1.rs  transport2.rs
netwc/: Cargo.toml
netwc/src/: main.rs
wc/: Cargo.toml  alertx.txt  f1
wc/src/: main.rs
